src/routes/Table/Table.scss
@import '../../styles/breakpoints';
@import '../../styles/colors';

.route-table {
    &__top {
        padding: 2rem 4rem;

        @media screen and (max-width: $breakpoint-md) {
            padding-left: 0.5rem;
            padding-right: 0.5rem;
        }

        &__caption {
            &__line {
                .icon {
                    background: none;
                    display: inline-block;
                    height: 2.5rem;
                    padding-right: 1rem;
                    vertical-align: middle;
                    width: 2.5rem;
                }

                &__bold {
                    font-weight: bold;
                }
            }
        }

        &__combos {
            align-items: center;
            display: none;
            flex-flow: column;
            padding-top: 6rem;

            select {
                border-radius: 4px;
                font-size: 1.5rem;
                font-weight: 800;
                margin: 1rem;
                padding: 0.75rem 2rem;
            }

            @media screen and (max-width: $breakpoint-md) {
                display: flex;
            }
        }
    }

    &__wrapper {
        align-items: center;
        display: flex;
        flex-flow: column;
        justify-content: center;
        margin-top: -3rem;

        &__candidate {
            font-weight: 800;
            height: 18rem;
            max-width: 3rem;
            overflow: visible;
            padding: 1rem;
            text-align: left;
            text-overflow: clip;
            transform: translate(1.5rem, 8rem) rotate(-45deg);
            transform-origin: left center;
            white-space: nowrap;
        }

        table {
            border-spacing: 0;
            width: 100%;
        }

        .table-content {
            border-bottom: 1px solid $button-primary;
            padding: 10px 8px;
            vertical-align: middle;

            &:nth-child(even) {
                background-color: #00000010;
            }
        }

        .highlight {
            background-color: $table-selected !important;
        }

        .small {
            display: none;

            @media screen and (max-width: $breakpoint-md) {
                display: table-cell;
            }
        }

        .large {
            @media screen and (max-width: $breakpoint-md) {
                display: none;
            }
        }

        &__section {
            font-size: 2rem;
            font-weight: 800;
            height: 100%;
            padding: 4rem 0 2rem;
            vertical-align: bottom;
        }

        .icon {
            background: none;
            height: 24px;
            margin: auto;
            width: 24px;
        }

        tbody {
            text-align: center;
        }

        .proposition {
            width: 30rem;

            @media screen and (max-width: $breakpoint-sm) {
                width: 18rem;
            }
        }
    }
}

